--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -43,6 +43,10 @@ $ico-sprite-dimensions: true;
 @import "_stages-block";
 @import "_statistic-block";
 @import "_benefits-block";
+@import "_requests-list";
+@import "_last-requests";
+
+
 @import "_header";
 @import "_footer";
 
