--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -10,6 +10,7 @@
 
 %c_000 { color: #000 }
 %c_0a80cb { color: #0a80cb; }
+%c_1e91da { color: #1e91da; }
 %c_2e3c54 { color: #2e3c54; }
 %c_2d9ae0 { color: #2d9ae0; }
 %c_2e3c54 { color: #2e3c54; }
@@ -17,7 +18,9 @@
 %c_697f9a { color: #697f9a; }
 %c_70a3c4 { color: #70a3c4; }
 %c_71a72c { color: #71a72c; }
+%c_757575 { color: #757575; }
 %c_8093a9 { color: #8093a9; }
+%c_8e95a1 { color: #8e95a1; }
 %c_96a5b8 { color: #96a5b8; }
 %c_ccd3d7 { color: #ccd3d7; }
 %c_fff { color: #fff; }
