--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -22,6 +22,7 @@
 %c_8093a9 { color: #8093a9; }
 %c_8e95a1 { color: #8e95a1; }
 %c_96a5b8 { color: #96a5b8; }
+%c_b8b8b8 { color: #b8b8b8; }
 %c_ccd3d7 { color: #ccd3d7; }
 %c_fff { color: #fff; }
 
@@ -41,6 +42,7 @@
 %font_28 { font-size: 28px; }
 %font_30 { font-size: 30px; }
 %font_36 { font-size: 36px; }
+%font_37 { font-size: 37px; }
 %font_48 { font-size: 48px; }
 
 %bold { font-weight: bold; }
