--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -45,6 +45,7 @@ $ico-sprite-dimensions: true;
 @import "_benefits-block";
 @import "_requests-list";
 @import "_last-requests";
+@import "_radnom-reviews";
 
 
 @import "_header";
